<resources>
    <string name="app_name">BlackJack</string>
    <string name="bank_labelUS">Bank</string>
    <string name="bank_labelFR">Banque</string>
    <string name="player_labelUS">Player</string>
    <string name="player_labelFR">Joueur</string>
    <string name="another_cardUS">ANOTHER CARD</string>
    <string name="another_cardFR">AUTRE CARTE</string>
    <string name="no_more_cardUS">NO MORE CARD</string>
    <string name="no_more_cardFR">FINIR TOUR</string>
    <string name="resetUS">RESET</string>
    <string name="resetFR">CHANGER</string>
    <string name="config">Config</string>
    <string name="configHintFR">Nombre de jeux de 52 cartes</string>
    <string name="configHintUS">Number of packs of 52 cards</string>
    <string name="nameHintFR">Votre nom</string>
    <string name="nameHintUS">Your name</string>
    <string name="greenBgFR">Fond vert</string>
    <string name="greenBgUS">Green theme</string>
    <string name="blackBgFR">Fond noir</string>
    <string name="blackBgUS">Black theme</string>
    <string name="bankBestUS">Bank best : </string>
    <string name="bankBestFR">Banque score : </string>
    <string name="bestFR"> score : </string>
    <string name="bestUS"> best : </string>
    <string name="configTitleUS">BlackJack settings</string>
    <string name="configTitleFR">Configuration BlackJack</string>
    <string name="acceptUS">Accept</string>
    <string name="acceptFR">Valider</string>
    <string name="cancelUS">Cancel</string>
    <string name="cancelFR">Annuler</string>
    <string name="betUS">BET</string>
    <string name="betFR">MISER</string>
    <string name="yourBetFR">Votre mise : </string>
    <string name="yourBetUS">Your bet : </string>
    <string name="dollars">$</string>
    <string name="euros">€</string>
    <string name="poolHintUS">Your pool</string>
    <string name="poolHintFR">Votre cagnotte</string>
</resources>