<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/anotherCardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/another_cardUS" />

        <Button
            android:id="@+id/noMoreCardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_more_cardUS" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resetUS" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/bankLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/bankTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:text="@string/bank_labelUS"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankHandLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankBestLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/bankBestLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/bankBestUS"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/playerTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:text="@string/player_labelUS"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerHandLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/playerBestLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/playerBestLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/betLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite" />

            <SeekBar
                android:id="@+id/betSeekBar"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:max="300"
                android:progress="1" />
        </LinearLayout>

        <Button
            android:id="@+id/betButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/betUS" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>